<resources>
    <string name="app_name">AndroidBase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aceptar">Aceptar</string>
    <string name="tittle_message">Tittle message</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="body_message">Body message</string>
    <string name="error_service">Servicio no disponible, intente más tarde.</string>
    <string name="verifica_conexion">Verifica tu conexion de internet</string>
    <string name="users">Users</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="n_mero">Número:</string>
    <string name="id">Id:</string>
    <string name="empty">***************</string>
    <string name="t_tulo">Título</string>
    <string name="detalle">DETALLE</string>
    <string name="the_bored_api">The Bored API</string>
    <string name="countries">REST Countries</string>
    <string name="dogs_api">Dog API</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="sig_up">First animation</string>
    <string name="login">Second animation</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="description">Description</string>
    <string name="animation_screen">Animation Screen</string>
</resources>